@@ -347,6 +347,7 @@ FORMAT_USERLIST_FOOTER_FSET,
 FORMAT_USERLIST_HEADER_FSET,
 
 FORMAT_USERMODE_FSET,
+FORMAT_USERMODE_OTHER_FSET,
 FORMAT_USERS_FSET,
 FORMAT_USERS_HEADER_FSET,
 FORMAT_USERS_SHIT_FSET,
